# almas

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
src/config/: settings.py
src/uno/: admin.py  models.py
src/uno/migrations/: 0001_initial.py  0002_address.py  0003_friendship.py  0004_price.py  0005_car.py
